# tozrt

./: LICENSE  README.md  index.html  package-lock.json  package.json  skills-lock.json  test_invalid.torrent  vite.config.ts
.agents/rules/: global-rule.md
.agents/workflows/: shell-commander.md
.github/workflows/: ci.yml  release.yml
.omc/: CLAUDE.md  project-memory.json
.omc/sessions/: 0222548b-e974-4f54-8813-309c46d61b08.json  02dd2d32-a2eb-4326-a46d-074a095eda69.json  16900bc5-9664-4628-a407-21f5dafb3360.json  1d98b57e-307c-4003-bc7e-b9ca983587e7.json  22329e67-2fda-4b9e-b4e2-56b68cc6b155.json  2479168d-95da-4b67-9a70-e0470e7ad467.json  5fad1977-2c0c-435b-97bc-bc52303ff027.json  62989165-b638-47cf-a2d3-534d0839fefe.json  821d5178-ec6b-48bb-88a1-3d0640f39da5.json  8e54ab3c-2c4a-4d41-b87a-443befe66e0a.json  9c54fa14-2aa1-4a04-80bc-ebc176359567.json  9ccddefb-f2b0-49ef-b42a-b45da695ad91.json  ba571daf-d859-4f71-98c0-f9149b8943bb.json  c7bf8d10-ec80-4f35-a450-e367a832bcdc.json  f3987a75-34de-4639-a75a-78d3a48cee13.json
.omc/state/: CLAUDE.md  agent-replay-1d98b57e-307c-4003-bc7e-b9ca983587e7.jsonl
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_errors.txt  check_errors2.txt  check_errors3.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: CLAUDE.md  commands.rs  lib.rs  main.rs  settings.rs  torrent.rs
src/components/: AddTorrentModal.tsx  CLAUDE.md  DetailPanel.tsx  Header.tsx  QuitConfirmModal.tsx  SettingsPage.tsx  Sidebar.tsx  TorrentList.tsx  TorrentPreviewModal.tsx
(+5 files in other folders)
